# devports

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md
.github/workflows/: npm-publish.yml  release.yml
.small/: constraints.small.yml  handoff.small.yml  intent.small.yml  plan.small.yml  progress.small.yml  workspace.small.yml
docs/: installation.md
docs/maintainers/: release-checklist.md
scripts/: install.sh
src/: cli.rs  config.rs  lib.rs  main.rs
src/proc/: cwd.rs  kill.rs  mod.rs  ps.rs  repo.rs
src/render/: json.rs  table.rs
src/scan/: lsof.rs  mod.rs  model.rs  ss.rs
src/tui/: app.rs  keys.rs  mod.rs  ui.rs
tests/: config_test.rs  help_output_test.rs  open_test.rs  parse_lsof_test.rs  parse_ps_test.rs  urls_test.rs
tests/fixtures/: lsof_macos.txt  ps_sample.txt
