[package]
name = "devports"
version = "0.1.0"
edition = "2024"
description = "CLI for managing local development ports and configured service URLs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/justyn-clark/devports"
homepage = "https://github.com/justyn-clark/devports"
exclude = [".small/**", ".github/**", "AGENTS.md", "packages/**", "scripts/**"]

[[bin]]
name = "devports"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
